lib/generated_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class onnx_genai {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  onnx_genai(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  onnx_genai.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void OgaShutdown() {
    return _OgaShutdown();
  }

  late final _OgaShutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('OgaShutdown');
  late final _OgaShutdown = _OgaShutdownPtr.asFunction<void Function()>();

  ffi.Pointer<ffi.Char> OgaResultGetError(
    ffi.Pointer<OgaResult> result,
  ) {
    return _OgaResultGetError(
      result,
    );
  }

  late final _OgaResultGetErrorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<OgaResult>)>>('OgaResultGetError');
  late final _OgaResultGetError = _OgaResultGetErrorPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<OgaResult>)>();

  ffi.Pointer<OgaResult> OgaSetLogBool(
    ffi.Pointer<ffi.Char> name,
    bool value,
  ) {
    return _OgaSetLogBool(
      name,
      value,
    );
  }

  late final _OgaSetLogBoolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<ffi.Char>, ffi.Bool)>>('OgaSetLogBool');
  late final _OgaSetLogBool = _OgaSetLogBoolPtr.asFunction<
      ffi.Pointer<OgaResult> Function(ffi.Pointer<ffi.Char>, bool)>();

  ffi.Pointer<OgaResult> OgaSetLogString(
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _OgaSetLogString(
      name,
      value,
    );
  }

  late final _OgaSetLogStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('OgaSetLogString');
  late final _OgaSetLogString = _OgaSetLogStringPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void OgaDestroyResult(
    ffi.Pointer<OgaResult> arg0,
  ) {
    return _OgaDestroyResult(
      arg0,
    );
  }

  late final _OgaDestroyResultPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaResult>)>>(
          'OgaDestroyResult');
  late final _OgaDestroyResult =
      _OgaDestroyResultPtr.asFunction<void Function(ffi.Pointer<OgaResult>)>();

  void OgaDestroyString(
    ffi.Pointer<ffi.Char> arg0,
  ) {
    return _OgaDestroyString(
      arg0,
    );
  }

  late final _OgaDestroyStringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'OgaDestroyString');
  late final _OgaDestroyString =
      _OgaDestroyStringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void OgaDestroyNamedTensors(
    ffi.Pointer<OgaNamedTensors> arg0,
  ) {
    return _OgaDestroyNamedTensors(
      arg0,
    );
  }

  late final _OgaDestroyNamedTensorsPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaNamedTensors>)>>(
      'OgaDestroyNamedTensors');
  late final _OgaDestroyNamedTensors = _OgaDestroyNamedTensorsPtr.asFunction<
      void Function(ffi.Pointer<OgaNamedTensors>)>();

  ffi.Pointer<OgaResult> OgaCreateSequences(
    ffi.Pointer<ffi.Pointer<OgaSequences>> out,
  ) {
    return _OgaCreateSequences(
      out,
    );
  }

  late final _OgaCreateSequencesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<ffi.Pointer<OgaSequences>>)>>('OgaCreateSequences');
  late final _OgaCreateSequences = _OgaCreateSequencesPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<ffi.Pointer<OgaSequences>>)>();

  void OgaDestroySequences(
    ffi.Pointer<OgaSequences> sequences,
  ) {
    return _OgaDestroySequences(
      sequences,
    );
  }

  late final _OgaDestroySequencesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaSequences>)>>(
          'OgaDestroySequences');
  late final _OgaDestroySequences = _OgaDestroySequencesPtr.asFunction<
      void Function(ffi.Pointer<OgaSequences>)>();

  int OgaSequencesCount(
    ffi.Pointer<OgaSequences> sequences,
  ) {
    return _OgaSequencesCount(
      sequences,
    );
  }

  late final _OgaSequencesCountPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<OgaSequences>)>>(
          'OgaSequencesCount');
  late final _OgaSequencesCount = _OgaSequencesCountPtr.asFunction<
      int Function(ffi.Pointer<OgaSequences>)>();

  int OgaSequencesGetSequenceCount(
    ffi.Pointer<OgaSequences> sequences,
    int sequence_index,
  ) {
    return _OgaSequencesGetSequenceCount(
      sequences,
      sequence_index,
    );
  }

  late final _OgaSequencesGetSequenceCountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Size Function(ffi.Pointer<OgaSequences>,
              ffi.Size)>>('OgaSequencesGetSequenceCount');
  late final _OgaSequencesGetSequenceCount = _OgaSequencesGetSequenceCountPtr
      .asFunction<int Function(ffi.Pointer<OgaSequences>, int)>();

  ffi.Pointer<ffi.Int32> OgaSequencesGetSequenceData(
    ffi.Pointer<OgaSequences> sequences,
    int sequence_index,
  ) {
    return _OgaSequencesGetSequenceData(
      sequences,
      sequence_index,
    );
  }

  late final _OgaSequencesGetSequenceDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Int32> Function(ffi.Pointer<OgaSequences>,
              ffi.Size)>>('OgaSequencesGetSequenceData');
  late final _OgaSequencesGetSequenceData =
      _OgaSequencesGetSequenceDataPtr.asFunction<
          ffi.Pointer<ffi.Int32> Function(ffi.Pointer<OgaSequences>, int)>();

  ffi.Pointer<OgaResult> OgaLoadImage(
    ffi.Pointer<ffi.Char> image_path,
    ffi.Pointer<ffi.Pointer<OgaImages>> images,
  ) {
    return _OgaLoadImage(
      image_path,
      images,
    );
  }

  late final _OgaLoadImagePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<OgaImages>>)>>('OgaLoadImage');
  late final _OgaLoadImage = _OgaLoadImagePtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<OgaImages>>)>();

  void OgaDestroyImages(
    ffi.Pointer<OgaImages> images,
  ) {
    return _OgaDestroyImages(
      images,
    );
  }

  late final _OgaDestroyImagesPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaImages>)>>(
          'OgaDestroyImages');
  late final _OgaDestroyImages =
      _OgaDestroyImagesPtr.asFunction<void Function(ffi.Pointer<OgaImages>)>();

  ffi.Pointer<OgaResult> OgaCreateModel(
    ffi.Pointer<ffi.Char> config_path,
    ffi.Pointer<ffi.Pointer<OgaModel>> out,
  ) {
    return _OgaCreateModel(
      config_path,
      out,
    );
  }

  late final _OgaCreateModelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<OgaModel>>)>>('OgaCreateModel');
  late final _OgaCreateModel = _OgaCreateModelPtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<OgaModel>>)>();

  void OgaDestroyModel(
    ffi.Pointer<OgaModel> model,
  ) {
    return _OgaDestroyModel(
      model,
    );
  }

  late final _OgaDestroyModelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<OgaModel>)>>(
          'OgaDestroyModel');
  late final _OgaDestroyModel =
      _OgaDestroyModelPtr.asFunction<void Function(ffi.Pointer<OgaModel>)>();

  ffi.Pointer<OgaResult> OgaGenerate(
    ffi.Pointer<OgaModel> model,
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<ffi.Pointer<OgaSequences>> out,
  ) {
    return _OgaGenerate(
      model,
      generator_params,
      out,
    );
  }

  late final _OgaGeneratePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaModel>,
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Pointer<OgaSequences>>)>>('OgaGenerate');
  late final _OgaGenerate = _OgaGeneratePtr.asFunction<
      ffi.Pointer<OgaResult> Function(
          ffi.Pointer<OgaModel>,
          ffi.Pointer<OgaGeneratorParams>,
          ffi.Pointer<ffi.Pointer<OgaSequences>>)>();

  ffi.Pointer<OgaResult> OgaCreateGeneratorParams(
    ffi.Pointer<OgaModel> model,
    ffi.Pointer<ffi.Pointer<OgaGeneratorParams>> out,
  ) {
    return _OgaCreateGeneratorParams(
      model,
      out,
    );
  }

  late final _OgaCreateGeneratorParamsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaModel>,
                  ffi.Pointer<ffi.Pointer<OgaGeneratorParams>>)>>(
      'OgaCreateGeneratorParams');
  late final _OgaCreateGeneratorParams =
      _OgaCreateGeneratorParamsPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaModel>,
              ffi.Pointer<ffi.Pointer<OgaGeneratorParams>>)>();

  void OgaDestroyGeneratorParams(
    ffi.Pointer<OgaGeneratorParams> generator_params,
  ) {
    return _OgaDestroyGeneratorParams(
      generator_params,
    );
  }

  late final _OgaDestroyGeneratorParamsPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<OgaGeneratorParams>)>>(
      'OgaDestroyGeneratorParams');
  late final _OgaDestroyGeneratorParams = _OgaDestroyGeneratorParamsPtr
      .asFunction<void Function(ffi.Pointer<OgaGeneratorParams>)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetSearchNumber(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<ffi.Char> name,
    double value,
  ) {
    return _OgaGeneratorParamsSetSearchNumber(
      generator_params,
      name,
      value,
    );
  }

  late final _OgaGeneratorParamsSetSearchNumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Char>,
              ffi.Double)>>('OgaGeneratorParamsSetSearchNumber');
  late final _OgaGeneratorParamsSetSearchNumber =
      _OgaGeneratorParamsSetSearchNumberPtr.asFunction<
          ffi.Pointer<OgaResult> Function(ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Char>, double)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsSetSearchBool(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    ffi.Pointer<ffi.Char> name,
    bool value,
  ) {
    return _OgaGeneratorParamsSetSearchBool(
      generator_params,
      name,
      value,
    );
  }

  late final _OgaGeneratorParamsSetSearchBoolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('OgaGeneratorParamsSetSearchBool');
  late final _OgaGeneratorParamsSetSearchBool =
      _OgaGeneratorParamsSetSearchBoolPtr.asFunction<
          ffi.Pointer<OgaResult> Function(
              ffi.Pointer<OgaGeneratorParams>, ffi.Pointer<ffi.Char>, bool)>();

  ffi.Pointer<OgaResult> OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(
    ffi.Pointer<OgaGeneratorParams> generator_params,
    int max_batch_size,
  ) {
    return _OgaGeneratorParamsTryGraphCaptureWithMaxBatchSize(
      generator_params,
      max_batch_size,
    );
  }
